--- a/app/templates/app/footer.html
+++ b/app/templates/app/footer.html
@@ -3,7 +3,7 @@
   <div class="container p-4">
     <div class="row">
       <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">T-eCommerce</h5>
+        <h5 class="font-bold text-danger">T-eCommerce</h5>
         <p style="text-align:justify">
           Whether you're a seasoned software developer or just starting in the
           industry, T-eCommerce has something for everyone. Our platform offers
@@ -15,20 +15,20 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
         <h5 class="text-uppercase">Links</h5>
         <ul class="list-unstyled mb-0">
-          <li><a href="#!" class="text-light text-decoration-none">Home</a></li>
-          <li><a href="#!" class="text-light text-decoration-none">About Us</a></li>
-          <li><a href="#!" class="text-light text-decoration-none">Privacy Policy</a></li>
-          <li><a href="#!" class="text-light text-decoration-none">Services Policy</a></li>
+          <li><a href="#!" class="btn text-decoration-none">Home</a></li>
+          <li><a href="#!" class="btn text-decoration-none">About Us</a></li>
+          <li><a href="#!" class="btn text-decoration-none">Privacy Policy</a></li>
+          <li><a href="#!" class="btn text-decoration-none">Services Policy</a></li>
         </ul>
       </div>
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
         <h5 class="text-uppercase text-center mb-0">Social Media</h5>
         <ul class="list-unstyled d-flex mt-2 text-center justify-content-center align-items-center">
-          <li><a href="#!" class="text-light pl-3"><i class="bi bi-instagram"></i></a></li>
-          <li><a href="#!" class="text-light p-3"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="#!" class="text-light"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#!" class="text-light p-3"><i class="bi bi-youtube"></i></a></li>
-          <li><a href="#!" class="text-light"><i class="bi bi-pinterest"></i></a></li>
+          <li><a href="#!" class="btn"><i class="bi bi-instagram"></i></a></li>
+          <li><a href="#!" class="btn"><i class="bi bi-twitter"></i></a></li>
+          <li><a href="#!" class="btn"><i class="bi bi-facebook"></i></a></li>
+          <li><a href="#!" class="btn"><i class="bi bi-youtube"></i></a></li>
+          <li><a href="#!" class="btn"><i class="bi bi-pinterest"></i></a></li>
         </ul>
       </div>
     </div>
