--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -2,26 +2,26 @@
 {% load static %}
 {% block title %} Home {% endblock title %}
 {% block banner %}
-<div id="carouselExample" class="carousel slide" data-bs-ride="carousel" >
+<div id="bannerSlider" class="carousel slide" data-bs-ride="carousel" >
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{% static 'app/images/banner/b1.png'%}" class="d-block w-100" alt="...">
+        <img src="{% static 'app/images/banner/b1.png'%}" class="d-block w-100" alt="banner_image">
       </div>
       <div class="carousel-item">
-        <img src="{% static 'app/images/banner/b2.png'%}" class="d-block w-100" alt="...">
+        <img src="{% static 'app/images/banner/b2.png'%}" class="d-block w-100" alt="banner_image">
       </div>
       <div class="carousel-item">
-        <img src="{% static 'app/images/banner/b3.png'%}" class="d-block w-100" alt="...">
+        <img src="{% static 'app/images/banner/b3.png'%}" class="d-block w-100" alt="banner_image">
       </div>
       <div class="carousel-item">
-        <img src="{% static 'app/images/banner/b4.png'%}" class="d-block w-100" alt="...">
+        <img src="{% static 'app/images/banner/b4.png'%}" class="d-block w-100" alt="banner_image">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#bannerSlider" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#bannerSlider" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
@@ -43,8 +43,43 @@
 
 {% block main-content %}
 <main class="m-3">
-    <div class="container">
-      <h1>Welcome to T-eCommerce Website</h1>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-body-secondary">Cargo Free</small>
+        </div>
+      </div>
     </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-body-secondary">Cargo Free</small>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-body-secondary">Cargo Free</small>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 {% endblock main-content %}
