--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -80,6 +80,77 @@
         </div>
       </div>
     </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-body-secondary">Cargo Free</small>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-body-secondary">Cargo Free</small>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-body-secondary">Cargo Free</small>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-body-secondary">Cargo Free</small>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-body-secondary">Cargo Free</small>
+        </div>
+      </div>
+    </div><div class="col">
+      <div class="card h-100">
+        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer text-center">
+          <small class="text-body-secondary">Cargo Free</small>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
 {% endblock main-content %}
