--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -17,14 +17,10 @@
               Products
             </a>
             <ul class="dropdown-menu">
-              <li><a class="btn dropdown-item" href="#">Macbook Air 13</a></li>
-              <li><a class="btn dropdown-item" href="#">Macbook Pro 13</a></li>
-              <li><a class="btn dropdown-item" href="#">Hp Victus 16</a></li>
-              <li><a class="btn dropdown-item" href="#">LG Gram 17</a></li>
-              <li><a class="btn dropdown-item" href="#">Dell XPS 15</a></li>
-              <li><a class="btn dropdown-item" href="#">HP Envy 13</a></li>
-              <li><a class="btn dropdown-item" href="#">Surface Laptop 4</a></li>
-              <li><a class="btn dropdown-item" href="#">Monster Huma</a></li>
+              <li><a class="btn dropdown-item" href="{% url 'category' 'WD' %}">Web Development</a></li>
+              <li><a class="btn dropdown-item" href="{% url 'category' 'DS' %}">Data Secience</a></li>
+              <li><a class="btn dropdown-item" href="{% url 'category' 'AI' %}">Artificial Intelligence</a></li>
+              <li><a class="btn dropdown-item" href="{% url 'category' 'GM' %}">Game® Development</a></li>
             </ul>
           </li>
           <li class="nav-item">
