--- a/app/templates/app/category.html
+++ b/app/templates/app/category.html
@@ -1,6 +1,6 @@
 {% extends 'app/base.html' %} 
 {% load static %} 
-{% block title %} Category {%endblock title %} 
+{% block title %} {{val.title}} {%endblock title %} 
 {% block main-content %}
 <div class="container my-5">
   <div class="row">
@@ -8,7 +8,7 @@
       <div class="list-group">
         {% for val in title %}
         <a
-          href="#"
+          href="{% url 'category-title' val.title %}"
           class="list-group-item list-group-item-action"
           aria-current="true"
           >{{val.title}}</a
@@ -20,7 +20,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             {% for prod in product %}
                <div class="col">
-                <a href="#" class="btn">
+                <a href="{% url 'product-detail' prod.id %}" class="btn">
                     <div class="card">
                         <img src="{{ prod.product_image.url}}" class="card-img-top" alt="product-image">
                         <div class="card-body">
