--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -18,7 +18,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="btn dropdown-item" href="{% url 'category' 'WD' %}">Web Development</a></li>
-              <li><a class="btn dropdown-item" href="{% url 'category' 'DS' %}">Data Secience</a></li>
+              <li><a class="btn dropdown-item" href="{% url 'category' 'DS' %}">Data Science</a></li>
               <li><a class="btn dropdown-item" href="{% url 'category' 'AI' %}">Artificial Intelligence</a></li>
               <li><a class="btn dropdown-item" href="{% url 'category' 'GM' %}">Game® Development</a></li>
             </ul>
