--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -1,24 +1,69 @@
-{% extends 'app/base.html' %}
-{% load static %}
-{% block title %} About Us {% endblock title %}
+{% extends 'app/base.html' %} {% load static %} 
+{% block title %} About Us {% endblock title %} 
+{% block banner %}
+<div id="bannerSlider" class="carousel slide" data-bs-ride="carousel" >
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="{% static 'app/images/banner/b1.png'%}" class="d-block w-100" alt="banner_image">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'app/images/banner/b2.png'%}" class="d-block w-100" alt="banner_image">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'app/images/banner/b3.png'%}" class="d-block w-100" alt="banner_image">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'app/images/banner/b4.png'%}" class="d-block w-100" alt="banner_image">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#bannerSlider" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#bannerSlider" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+{% endblock banner %}
+
 {% block main-content %}
 <div class="container">
-    <div class="about">
-        <div class="heading-about m-2 p-5">
-            <h3 class="text-center font-bold text-uppercase text-warning">About Us
-            </h3>
-        </div>
-        <div class="body-about mb-2 p-5">
-            <p class="text-justify">
-                T-eCommerce is an online marketplace designed specifically for software developers. Here, you can find a wide variety of products that are essential for software development. From code editors and programming languages to software development tools and frameworks, T-eCommerce has it all.
-
-Our platform features products from some of the most trusted brands in the software development industry. We offer everything you need to build cutting-edge software, including code editors like Visual Studio Code and Atom, programming languages such as JavaScript, Python, and Java, and frameworks like React and Angular.
-
-At T-eCommerce, we take pride in providing our customers with high-quality products at competitive prices. Our platform is user-friendly and easy to navigate, making it easy for you to find the products you need. Plus, we offer fast and reliable shipping, so you can get your products as quickly as possible.
-
-Whether you're a seasoned software developer or just starting in the industry, T-eCommerce has something for everyone. Our platform offers a variety of products to suit any budget, so you can find the right tools for your needs. So why wait? Browse our selection of software development products today and take your skills to the next level!
-            </p>
-        </div>
+  <div class="about">
+    <div class="heading-about m-2 p-5">
+      <h3 class="text-center font-bold text-uppercase text-warning">
+        About Us
+      </h3>
     </div>
+    <div class="body-about mb-2 p-5">
+      <p class="text-justify">
+        T-eCommerce is an online marketplace designed specifically for software
+        developers. Here, you can find a wide variety of products that are
+        essential for software development. From code editors and programming
+        languages to software development tools and frameworks, T-eCommerce has
+        it all.
+      </p> <br>
+      <p>
+        Our platform features products from some of the most trusted
+        brands in the software development industry. We offer everything you
+        need to build cutting-edge software, including code editors like Visual
+        Studio Code and Atom, programming languages such as JavaScript, Python,
+        and Java, and frameworks like React and Angular. At T-eCommerce, we take
+        pride in providing our customers with high-quality products at
+        competitive prices. <br>
+      </p>
+      <p>
+        Our platform is user-friendly and easy to navigate,
+        making it easy for you to find the products you need. Plus, we offer
+        fast and reliable shipping, so you can get your products as quickly as
+        possible. Whether you're a seasoned software developer or just starting
+        in the industry, T-eCommerce has something for everyone. Our platform
+        offers a variety of products to suit any budget, so you can find the
+        right tools for your needs. So why wait? Browse our selection of
+        software development products today and take your skills to the next
+        level!
+      </p>
+    </div>
+  </div>
 </div>
 {% endblock main-content %}
