--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -2,7 +2,33 @@
 {% load static %}
 {% block title %} Contact Us{% endblock title %}
 {% block main-content %}
-<h3 class="text-center text-uppercase text-warning">
-    Contact Us
-</h3>
+<div class="mt-0 mb-2">
+    <img src="{% static 'app/images/contact-us.png' %}" class="w-100" alt="">
+</div>
+<div class="container mt-4 mb-2 ">
+    <div class="row m-3">
+        <div class="col-lg-3">
+            <ul class="list-unstyled">
+                <li><i class="bi bi-phone-vibrate-fill"></i> <a href="tel:+5555555" class="text-decoration-none text-white">555555</a></li>
+                <li><i class="bi bi-envelope-at-fill"></i> <a href="mailto:dsdsd" class="text-decoration-none text-white">dsdvsds</a></li>
+            </ul>
+        </div>
+        <div class="col-lg-4">
+            <div class="card mb-3 border-0" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="{% static 'app/images/logo.jpg' %}" class="img-fluid rounded-start w-100" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Address</h5>
+                      <p class="card-text">Lorem ipsum dolor sit. No:13 World</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        <div class="col-lg-5 border border-warning"> map</div>
+    </div>
+</div>
 {% endblock main-content %}
