--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -43,113 +43,50 @@
 
 {% block main-content %}
 <main class="m-3">
-  <div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="row row-cols-1 row-cols-md-4 g-4 m-3 mb-4">
     <div class="col">
-      <div class="card h-100">
-        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <a href="{% url 'category' 'WD' %}" class="text-decoration-none">
+        <div class="card h-100">
+          <img src="https://mediasat.info/wp-content/uploads/2021/06/landing-page-create.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Web Development</h5>
+            <p class="card-text">Are you looking laptop for web development?</p>
+          </div>
         </div>
-        <div class="card-footer text-center">
-          <small class="text-body-secondary">Cargo Free</small>
-        </div>
-      </div>
+      </a>
     </div>
     <div class="col">
-      <div class="card h-100">
-        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <a href="{% url 'category' 'DS' %}" class="text-decoration-none">
+        <div class="card h-100">
+          <img src="https://s3-us-west-2.amazonaws.com/aa.techdemand.io/wp-content/uploads/2022/12/26164917/Data-Science.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Data Science</h5>
+            <p class="card-text">Are you looking laptop for data science?</p>
+          </div>
         </div>
-        <div class="card-footer text-center">
-          <small class="text-body-secondary">Cargo Free</small>
-        </div>
-      </div>
+      </a>
     </div>
     <div class="col">
-      <div class="card h-100">
-        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <a href="{% url 'category' 'AI' %}" class="text-decoration-none">
+        <div class="card h-100">
+          <img src="https://minbuz.com/wp-content/uploads/2022/12/Artificial-Intelligence.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Artificial Intelligence</h5>
+            <p class="card-text">Are you looking laptop for ai?</p>
+          </div>
         </div>
-        <div class="card-footer text-center">
-          <small class="text-body-secondary">Cargo Free</small>
-        </div>
-      </div>
+      </a>
     </div>
     <div class="col">
-      <div class="card h-100">
-        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <a href="{% url 'category' 'GM' %}" class="text-decoration-none">
+        <div class="card h-100">
+          <img src="https://nanova.org/wp-content/uploads/2020/09/pkyc6u1i.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Game® Development</h5>
+            <p class="card-text">Are you looking laptop for game development?</p>
+          </div>
         </div>
-        <div class="card-footer text-center">
-          <small class="text-body-secondary">Cargo Free</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-        <div class="card-footer text-center">
-          <small class="text-body-secondary">Cargo Free</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-        <div class="card-footer text-center">
-          <small class="text-body-secondary">Cargo Free</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-        <div class="card-footer text-center">
-          <small class="text-body-secondary">Cargo Free</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-        <div class="card-footer text-center">
-          <small class="text-body-secondary">Cargo Free</small>
-        </div>
-      </div>
-    </div><div class="col">
-      <div class="card h-100">
-        <img src="https://th.bing.com/th/id/R.c62f2ca6187665241edecb9d355016c0?rik=QCZw3DVhK2Bskg&pid=ImgRaw&r=0" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-        <div class="card-footer text-center">
-          <small class="text-body-secondary">Cargo Free</small>
-        </div>
-      </div>
+      </a>
     </div>
   </div>
 </main>
