--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -7,11 +7,13 @@
 </div>
 <div class="container mt-4 mb-2 ">
     <div class="row m-3">
-        <div class="col-lg-3">
-            <ul class="list-unstyled">
-                <li><i class="bi bi-phone-vibrate-fill"></i> <a href="tel:+5555555" class="text-decoration-none text-white">555555</a></li>
-                <li><i class="bi bi-envelope-at-fill"></i> <a href="mailto:dsdsd" class="text-decoration-none text-white">dsdvsds</a></li>
-            </ul>
+        <div class="col-lg-3 mb-4">
+            <div class="m-2 p-2 w-100">
+                <ul class="list-unstyled m-2">
+                    <li><i class="bi bi-phone-vibrate-fill"></i> <a href="tel:+5555555" class="text-decoration-none text-white">555555</a></li>
+                    <li><i class="bi bi-envelope-at-fill"></i> <a href="mailto:dsdsd" class="text-decoration-none text-white">dsdvsds</a></li>
+                </ul>
+            </div>
         </div>
         <div class="col-lg-4">
             <div class="card mb-3 border-0" style="max-width: 540px;">
@@ -28,7 +30,9 @@
                 </div>
               </div>
         </div>
-        <div class="col-lg-5 border border-warning"> map</div>
+        <div class="col-lg-5">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1441.4012502280798!2d7.420603089167741!3d43.7354295324908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cdc28bfa733ce7%3A0x1002d8bbd550b626!2sMonaco%20Grand%20Prix%20de%20Monaco!5e0!3m2!1str!2str!4v1684020756637!5m2!1str!2str"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-100 h-100"></iframe>
+        </div>
     </div>
 </div>
 {% endblock main-content %}
