--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -51,7 +51,7 @@
         <li class="nav-item mx-2"><a href="#" class="btn nav-link">Cart 4</a></li>
         <li class="nav-item mx-2"><a href="#" class="btn nav-link">Wishlist 4</a></li>
         <li class="nav-item mx-2"><a href="#" class="btn nav-link">Login</a></li>
-        <li class="nav-item mx-2"><a href="#" class="btn nav-link">Register</a></li>
+        <li class="nav-item mx-2"><a href="{% url 'customer-register' %}" class="btn nav-link">Register</a></li>
       </ul>
     </div>
   </nav>
