--- a/app/templates/app/customerregistration.html
+++ b/app/templates/app/customerregistration.html
@@ -16,10 +16,24 @@
                 {% endfor %}
                 <input type="submit" value="Submit" class="btn btn-success">
 
-                <div class="text-center text-white fw-bold">
+                <div class="text-center text-success fw-bold">
                     <small>Existing User? <a href="#" class="text-danger text-decoration-none">Login Now</a>
                     </small>
                 </div>
+
+                {% if form.non_field_errors %}
+                    {% for error in form.non_field_errors %}
+                       <p class="alert alert-warning">{{error}}</p>
+                    {% endfor %}
+                {% endif %}
+
+                {% if messages %}
+                  {% for msg in messages %}
+                   <div class="alert alert-{{msg.tags}}" role="alert">
+                    {{msg}}
+                   </div>
+                   {% endfor %}
+                {% endif %}
             </form>
         </div>
     </div>
