--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -1,7 +1,44 @@
-{% extends "app/base.html" %}
-{% load static %}
-{% block title %}Profile{% endblock title %}
-
+{% extends "app/base.html" %} 
+{% load static %} 
+{% block title %}Profile{% endblock title %} 
 {% block main-content %}
-<h5 class="text-warning">Profile Page Hello world!</h5>
+<div class="container my-5">
+    <div class="row">
+        <h3>Wellcome <span>{{request.user}}</span>!</h3>
+
+        <div class="col-sm-2">
+           <ul class="list-unstyled">
+                <li class="d-grid my-2">
+                  <a href="{% url 'profile' %}" class="btn btn-primary">Profile</a>
+                </li>
+                <li class="d-grid my-2">
+                  <a href="{% url 'address'%}" class="btn btn-info">Address</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-sm-8 offset-sm-1">
+            <form action="" method="post">
+              {% csrf_token %} {% for fm in form %} {{fm.label_tag}} {{fm}}
+              <small class="text-danger">{{fm.errors|striptags}}</small>
+              <br />
+              {% endfor %}
+
+                <div class="col-sm-12 mt-3">
+                  <button type="submit" class="btn btn-success">Submit</button>
+                </div>
+
+                {% if form.non_field_errors %} 
+                {% for error in form.non_field_errors %}
+                    <p class="alert alert-warning">{{error}}</p>
+                {% endfor %} 
+                {% endif %} 
+                {% if messages %} 
+                {% for msg in messages %}
+                  <div class="alert alert-{{msg.tags}}" role="alert">{{msg}}</div>
+                {% endfor %} 
+                {% endif %}
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock main-content %}
