--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -4,15 +4,20 @@ body{
 nav.navbar a.btn:hover{
     border-top: 1px solid red;
     border-bottom:1px solid green !important;
-    color:white !important;
+    
 }
 footer{
+    background-color: rgb(221, 221, 221) !important;
+    font-weight: bold;
     bottom:0
 }
+footer a.btn{
+    font-weight: 400;
+}
+
 footer a.btn:hover{
     border-top:1px solid red !important;
     border-bottom:1px solid green !important;
-    color:white !important;
 }
 .owl-carousel .item{
  /* border: 1px solid black; */
@@ -53,51 +58,3 @@ footer a.btn:hover{
 
 
 
-
-.buttermilk{
-    background-color:#fff;background-image:linear-gradient(#fff7ef, #fff);
-    background-image:-webkit-linear-gradient(#fff7ef, #fff);
-    background-image:-moz-linear-gradient(#fff7ef, #fff);
-    background-image:-ms-linear-gradient(#fff7ef, #fff);
-    background-image:-o-linear-gradient(#fff7ef, #fff);
-    padding:50px 40px;
-    border:1px solid #efe8e1;
-    padding-bottom:20px;
-}
-
-.smbg{
-    background-color:#fff;
-    background-image:linear-gradient(rgba(110, 69, 143, 0.1), #fff);
-    background-image:-webkit-linear-gradient(rgba(110, 69, 143, 0.1), #fff);
-    background-image:-moz-linear-gradient(rgba(110, 69, 143, 0.1), #fff);
-    background-image:-ms-linear-gradient(rgba(110, 69, 143, 0.1), #fff);
-    background-image:-o-linear-gradient(rgba(110, 69, 143, 0.1), #fff);
-}
-
-.curdbgpro{
-    background-color:#fff;
-    background-image:linear-gradient(rgba(10, 77, 123, 0.1), #fff);
-    background-image:-webkit-linear-gradient(rgba(10, 77, 123, 0.1), #fff);
-    background-image:-moz-linear-gradient(rgba(10, 77, 123, 0.1), #fff);
-    background-image:-ms-linear-gradient(rgba(10, 77, 123, 0.1), #fff);
-    background-image:-o-linear-gradient(rgba(10, 77, 123, 0.1), #fff);
-}
-
-.goodnessseccont img{
-    width:100%;
-}
-
-.mlkpro{
-    color:#636362;
-    font-size:22px;
-    line-height:22px;
-    margin-bottom:15px;
-    width:43%;
-    margin:0 auto;
-    text-align:center;
-    
-}
-
-.goodnesssec a{
-    text-decoration: none;
-}
