--- a/app/templates/app/footer.html
+++ b/app/templates/app/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="bg-dark text-center text-lg-start border-top border-success">
+<footer class="text-center text-lg-start border-top border-success">
   <div class="container p-4">
     <div class="row">
       <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
@@ -13,7 +13,7 @@
         </p>
       </div>
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Links</h5>
+        <h5 class="text-uppercase text-success">Links</h5>
         <ul class="list-unstyled mb-0">
           <li><a href="#!" class="btn text-decoration-none">Home</a></li>
           <li><a href="#!" class="btn text-decoration-none">About Us</a></li>
@@ -22,7 +22,7 @@
         </ul>
       </div>
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-        <h5 class="text-uppercase text-center mb-0">Social Media</h5>
+        <h5 class="text-uppercase text-center mb-0 text-success">Social Media</h5>
         <ul class="list-unstyled d-flex mt-2 text-center justify-content-center align-items-center">
           <li><a href="#!" class="btn"><i class="bi bi-instagram"></i></a></li>
           <li><a href="#!" class="btn"><i class="bi bi-twitter"></i></a></li>
