--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg bg-dark border-bottom border-danger">
+<nav class="navbar navbar-expand-lg  border-bottom border-danger">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="{% static 'app/images/logo.jpg' %}" style="width:40px" alt="logo">
