--- a/app/templates/app/footer.html
+++ b/app/templates/app/footer.html
@@ -13,8 +13,8 @@
         </p>
       </div>
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-        <h5 class="text-uppercase text-success">Links</h5>
-        <ul class="list-unstyled mb-0">
+        <h5 class="text-uppercase text-success text-center">Links</h5>
+        <ul class="list-unstyled text-center mb-0">
           <li><a href="#!" class="btn text-decoration-none">Home</a></li>
           <li><a href="#!" class="btn text-decoration-none">About Us</a></li>
           <li><a href="#!" class="btn text-decoration-none">Privacy Policy</a></li>
