--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -1,6 +1,10 @@
 body{
     overflow-x: hidden;
 }
+nav.navbar .search-butn:hover{
+    background-color: red !important;
+    color: white !important;
+}
 nav.navbar a.btn{
     font-weight:bold;
 }
