--- a/app/templates/app/productdetail.html
+++ b/app/templates/app/productdetail.html
@@ -21,17 +21,16 @@ Details {% endblock title %} {% block main-content %}
       <ul class="fs-5">
         <li>{{product.description}}</li>
       </ul>
-      <div class="button row flex">
+      <form action="/add-to-cart" class="d-inline">
+        <input type="hidden" name="prod_id" value="{{product.id}}">
         <button
-          class="d-grid gap-2 btn1 btn btn-success p-1 m-1 btn-lg text-decoration-none"
-          type="submit"
-        >
-          Add to Cart
-        </button>
-        <div class="btn btn-danger p-1 m-1 btn-lg">
-          <a href="#" class="text-decoration-none text-white">Buy Now</a>
-        </div>
-      </div>
+        class="btn btn-success shadow py-2 px-5"
+        type="submit"
+      >
+        Add to Cart
+      </button>
+      </form>
+      <a href="{% url 'show-cart' %}" class="btn btn-danger shadow px-5 py-2 ms-4">Buy Now</a>
     </div>
   </div>
 </div>
