--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg  border-bottom border-danger">
-    <div class="container-fluid">
+<nav class="navbar sticky-top navbar-expand-lg  bg-light border-bottom border-danger sticky">
+    <div class="container container-fluid">
       <a class="navbar-brand" href="#">
         <img src="{% static 'app/images/logo.jpg' %}" style="width:40px" alt="logo">
       </a>
