--- a/app/templates/app/addtocart.html
+++ b/app/templates/app/addtocart.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html'%} 
+{% extends 'app/base.html' %} 
 {% load static %}
 {% block title %}Cart{% endblock title %}
 {% block main-content %}
@@ -23,13 +23,13 @@
                                     {{item.product.description}}
                                 </p>
                                 <div class="my-3">
-                                    <label for="quantity">Quantity:</label>
-                                    <a pid="{{item.product.id}}" class="minus-cart btn"><i class="fa fa-minus-square fa-lg"></i></a>
+                                    <span for="quantity">Quantity:</span>
+                                    <a class="minus-cart btn" pid={{item.product.id}}><i class="fas fa-minus-square fa-lg text-danger"></i></a>
                                     <span id="quantity">{{item.quantity}}</span>
-                                    <a pid="{{item.product.id}}" class="plus-cart btn"> <i class="fa fa-plus-square fa-lg"></i></a>
+                                    <a class="plus-cart btn" pid={{item.product.id}}> <i class="fas fa-plus-square fa-lg text-primary"></i></a>
                                 </div>
                                 <div class="d-flex justify-content-between">
-                                    <a href="" class="remove-cart btn btn-sm btn-secondary mr-3" pid="{{item.product.id}}">Remove Item </a>
+                                    <a href="#" class="remove-cart btn btn-sm btn-warning fw-bold mr-3" pid={{item.product.id}}>Remove Item </a>
                                     <p class="mb-0"><span><strong>$ {{item.product.discount_price}}</strong></span></p>
                                 </div>
                             </div>
