--- a/app/templates/app/productdetail.html
+++ b/app/templates/app/productdetail.html
@@ -5,11 +5,11 @@ Details {% endblock title %} {% block main-content %}
     <div class="img2 col-lg-5 mt-5">
       <img
         src="{{product.product_image.url}}"
-        class="image col-xs-6 col-sm-12 col-lg-12 mt-3 text-sm-center w-100 h-75"
+        class="image col-xs-6 col-sm-12 col-lg-12 mt-3 text-sm-center"
         alt="product_image"
       />
     </div>
-    <div class="productdetail col-lg-5">
+    <div class="productdetail col-lg-5 mb-5">
       <h2>{{ product.title }}</h2>
       <h5>
         <b class="text-success">${{product.discount_price}}</b>/-
@@ -20,6 +20,8 @@ Details {% endblock title %} {% block main-content %}
       <h4>Product Features</h4>
       <ul class="fs-5">
         <li>{{product.description}}</li>
+        <li>Composition: {{product.composition}}</li>
+        <li>Use: {{product.prodapp}}</li>
       </ul>
       <form action="/add-to-cart" class="d-inline">
         <input type="hidden" name="prod_id" value="{{product.id}}">
