--- a/app/templates/app/addtocart.html
+++ b/app/templates/app/addtocart.html
@@ -4,8 +4,8 @@
 {% block main-content %}
 <div class="container my-5">
     <div class="row">
-    {% if cart %}
-        <h3 class="text-center mb-5">Shopping Cart</h3>
+        {% if cart %}
+        <h3 class="text-center text-uppercase text-warning mb-5">Shopping Cart</h3>
         <div class="col-sm-8">
             <div class="card">
                 <div class="card-body">
@@ -13,24 +13,26 @@
                     {% for item in cart %}
                     <div class="row">
                         <div class="col-sm-3 text-center align-self-center">
-                            <img src="{{item.product.product_image.url}}" alt="{{item.product.product_title}}" 
-                            class="img-fluid img-thumbnail shadow-sm" height="150" width="150">
+                            <img src="{{item.product.product_image.url}}" 
+                            class="img-fluid img-thumbnail shadow-sm" height="150" width="150" alt="{{item.product.title}}">
                         </div>
                         <div class="col-sm-9">
                             <div>
                                 <h5>{{item.product.title}}</h5>
-                                <p class="mb-2 text-muted small">
-                                    {{item.product.description}}
-                                </p>
+                                <p class="mb-2 text-muted small bordered">{{item.product.description}}</p>
                                 <div class="my-3">
-                                    <span for="quantity">Quantity:</span>
-                                    <a class="minus-cart btn" pid={{item.product.id}}><i class="fas fa-minus-square fa-lg text-danger"></i></a>
+                                    <label for="quantity">Quantity:</label>
+                                    <a class="minus-cart btn" pid={{item.product.id}}><i class="bi bi-dash-square-fill"></i></a>
                                     <span id="quantity">{{item.quantity}}</span>
-                                    <a class="plus-cart btn" pid={{item.product.id}}> <i class="fas fa-plus-square fa-lg text-primary"></i></a>
+                                    <a class="plus-cart btn" pid={{item.product.id}}><i class="bi bi-plus-square-fill"></i></a>
                                 </div>
                                 <div class="d-flex justify-content-between">
-                                    <a href="#" class="remove-cart btn btn-sm btn-warning fw-bold mr-3" pid={{item.product.id}}>Remove Item </a>
-                                    <p class="mb-0"><span><strong>$ {{item.product.discount_price}}</strong></span></p>
+                                    <a href="#" class="remove-cart mr-3 btn btn-secondary" pid={{item.product.id}}>Remove</a>
+                                    <p class="mb-0">
+                                        <span>
+                                            <strong>$ {{item.product.discount_price}}</strong>
+                                        </span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -42,27 +44,34 @@
         </div>
         <div class="col-sm-4">
             <div class="card">
+                <h3 class="bg-primary text-light text-center">The Total Amount of:</h3>
                 <div class="card-body">
-                    <h3>Total Amount of</h3>
                     <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount <span id="amount">$ {{amount}}</span></li>
-                        <li class="list-group-items d-flex justify-content-between align-items-center px-0">Shipping <span>Free <span class="text-light text-muted text-decoration-line-through">$ 40</span></span></li>
-                        <li class="list-group-items d-flex justify-content-between align-items-center px-0 border-0 mb-3">
+                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                            Amount <span id="amount">$ {{amount}}</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
+                            Shipping <span> Free <i class="bi bi-emoji-wink-fill"></i></span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                             <div>
-                                <strong>Total</strong> <small>{including GST}</small>
+                                <strong>Total</strong> <small>(including GST)</small>
                             </div>
-                            <span id="totalamount">$ {{totalamount}}</span>
+                            <span id="totalamount">
+                                <strong>
+                                    $ {{totalamount}}
+                                </strong>
+                            </span>
                         </li>
                     </ul>
-                    <div class="d-grid">
-                        <a href="{% url 'checkout' %}" class="btn btn-primary">Place Order</a>
-                    </div>
+                    <div class="d-grid"><a href="{% url 'checkout' %}" class="btn btn-success">Place Order</a></div>
                 </div>
             </div>
         </div>
         {% else %}
-        <h5 class="mb-5">Cart is empty</h5>
-    {% endif %}
+        <h3 class="text-center mb-5">Cart is Empty</h3>
+        <a href="{% url 'home-page' %}" class="btn btn-primary fw-bold mb-5 p-4">Start Shopping</a>
+        {% endif %}
     </div>
 </div>
 {% endblock main-content %}
