--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -26,6 +26,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
-    <script src="{% static 'app/js/myscript.js' %}"></script>
+    <script src="{% static 'app/js/script.js' %}"></script>
 </body>
 </html>
