--- a/app/templates/app/checkout.html
+++ b/app/templates/app/checkout.html
@@ -50,9 +50,11 @@
                     <input type="number" class="form-control" id="totalamount" name="totalamount" value="{{totalamount}}" readonly>
                 </div>
                 <div class="text-end">
-                    <button type="submit" class="btn btn-warning fw-bold mt-3 px-5">Continue</button>
+                    {% comment %} <button type="submit" class="btn btn-warning fw-bold mt-3 px-5">Continue</button>{% endcomment %}
                     <!-- <div id="paypal-button-container"></div> -->
-                    {% comment %}<button type="submit" class="btn btn-warning fw-bold mt-3 px-5" id="rzp-button1">Payment</button>{% endcomment %}
+                    <button type="submit" class="btn btn-warning fw-bold mt-3 px-5" id="rzp-button1">Payment</button>
+
+                    <!-- I'LL NOT ADD PAYMENT METHODS. -->
                 </div>
             </form>
         </div>
