--- a/app/templates/app/productdetail.html
+++ b/app/templates/app/productdetail.html
@@ -33,6 +33,8 @@ Details {% endblock title %} {% block main-content %}
       </button>
       </form>
       <a href="{% url 'show-cart' %}" class="btn btn-danger shadow px-5 py-2 ms-4">Buy Now</a>
+      <a class="ms-4 text-dark btn btn-md fw-bold border border-2-solid" id="wishlisticon"><i class="bi bi-heart-fill"></i></a>
+      </script>
     </div>
   </div>
 </div>
