--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -35,8 +35,8 @@
           <button title="search-btn" class="btn text-danger p-2 search-butn" type="submit"><i class="bi bi-search"></i></button>
         </form>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item mx-2"><a href="{% url 'show-cart' %}" class="btn nav-link">Cart<i class="bi bi-cart4"></i><span class="badge bg-primary">{% if totalitem > 0 %} {{totalitem}} {% endif %}</span></a></li>
-          <li class="nav-item mx-2"><a href="#" class="btn nav-link">Wishlist 4</a></li>
+          <li class="nav-item mx-2"><a href="{% url 'show-cart' %}" class="btn nav-link"><i class="bi bi-cart4"></i><span class="badge bg-info">{% if totalitem > 0 %} {{totalitem}} {% endif %}</span></a></li>
+          <li class="nav-item mx-2"><a href="#" class="btn nav-link"><i class="fa fa-heart"></i> <span class="badge bg-danger">{% if wishitem > 0 %} {{wishitem}} {% endif %}</span></a></li>
           {% if user.is_authenticated %}
           <li class="nav-item dropdown mx-2">
             <a class="btn nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" 
