--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -13,6 +13,9 @@
     <link rel="shortcut icon" href="{% static 'app/images/logo.jpg'%}" type="image/x-icon">
 </head>
 <body>
+    <section class="top-bar bg-dark text-light text-center pt-1 mt-0 mb-0">
+        <small><p>No payment method added. Because I'm not a business.</p></small>
+    </section>
     {% include 'app/navbar.html' %}
     {% block banner %}{% endblock banner %}
     {% block information %}{% endblock information %}
