--- a/app/templates/app/productdetail.html
+++ b/app/templates/app/productdetail.html
@@ -26,17 +26,17 @@ Details {% endblock title %} {% block main-content %}
       <form action="/add-to-cart" class="d-inline">
         <input type="hidden" name="prod_id" value="{{product.id}}">
         <button
-        class="btn btn-primary shadow py-2 px-5"
+        class="btn btn-btn btn-outline-success hover-btn-success shadow py-2 px-5"
         type="submit"
       >
         Add to Cart
       </button>
       </form>
-      <a href="{% url 'show-cart' %}" class="btn btn-warning shadow px-5 py-2 ms-4">Buy Now</a>
+      <!-- <a href="{% url 'show-cart' %}" class="btn btn-warning shadow px-5 py-2 ms-4">Buy Now</a> -->
       {% if wishlist %}
-      <a pid={{product.id}} class="minus-wishlist btn btn-danger shadow  ms-4"><i class="fas fa-heart fa-lg"></i></a>
+      <a pid={{product.id}} class="minus-wishlist btn btn-outline-danger shadow  ms-4"><i class="fas fa-heart fa-lg"></i></a>
       {% else %}
-      <a pid={{product.id}} class="plus-wishlist btn btn-primary shadow  ms-4"><i class="fas fa-heart fa-lg"></i></a>
+      <a pid={{product.id}} class="plus-wishlist btn btn-outline-secondary  shadow  ms-4"><i class="fas fa-heart fa-lg"></i></a>
       {% endif %}
     </div>
   </div>
