--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar sticky-top navbar-expand-lg  bg-light border-bottom border-danger sticky">
+<nav class="navbar sticky-top navbar-expand-lg  bg-light border-bottom border-danger sticky top-0 mt-0">
     <div class="container container-fluid">
       <a class="navbar-brand" href="#">
         <img src="{% static 'app/images/logo.jpg' %}" style="width:40px" alt="logo">
